--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<p id="demo">{{ hello }}</p><br/>
+<p id="demo">{{ hello | uppercase}}</p><br/>
 <span>{{ hello }}</span><br/>
 <input type="text"[(ngModel)]="hello"/><br/>
 <select [(ngModel)]="selectedOption">
@@ -15,6 +15,11 @@
     Suanda hello degiskeni 5 karakterlidir
 </div>
 
+<ng-container *ngIf="hello.length !== 5">
+    <div>Birinci div</div>
+    <div>Ikinci div</div>
+</ng-container>
+
 <div #divElement>
     <p>
         Bu elementi yakalayacagiz.
@@ -22,8 +27,21 @@
 </div>
 
 <ol>
-    <li *ngFor="let todoItem of todoList; let i = index">{{ i <= 0 ? todoItem : 'Index 0\'dan buyuk.'}}</li>
+    <li *ngFor="let todoItem of todoList | slice: 1:3; let i = index">{{ i <= 0 ? todoItem : 'Index 0\'dan buyuk.'}}</li>
 </ol>
-<app-footer [footerText]="hello" (onFooterTextChange)="handleHelloTextChange($event)"></app-footer>
+
+<ol>
+    <li *ngFor="let todoItem of todoList | slice: 2:3">{{todoItem}}</li>
+</ol>
+
+<app-footer [footerText]="hello" (onFooterTextChange)="handleHelloTextChange($event)">
+    <p class="paragraph">
+        Footer content
+    </p>
+</app-footer>
 <app-button [buttonText]="'Kayit Ol'" (onButtonClick)="handleSignUpButtonClick()"></app-button>
 <app-button [buttonText]="'Giris Yap'" (onButtonClick)="handleLogInButtonClick()" [buttonType]="'secondary'"></app-button>
+
+<p>{{ creationDate | date:"dd-MM-yyyy"}}</p>
+<p>{{amount | currency:"TRY" | lowercase}}</p>
+<p>{{currentAmount | exponentialStrength: 10}}</p>
